exp 6-10 added, cleanup

--- a/mlLab/1_find_S.ipynb
+++ b/mlLab/1_find_S.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Find S Algorithm :**"
+    "# Find S Algorithm"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"datasets/mlLab/140524_1.csv\")"
+    "dataset = pd.read_csv(\"../datasets/mlLab/140524_1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,55 +109,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Creating feature and label sets :*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['sunny' 'warm' 'normal' 'strong' 'warm' 'same']\n",
-      " ['sunny' 'warm' 'high' 'strong' 'warm' 'same']\n",
-      " ['rainy' 'cold' 'high' 'strong' 'warm' 'change']\n",
-      " ['sunny' 'warm' 'high' 'strong' 'cool' 'change']] \n",
-      " (4, 6)\n",
-      "\n",
-      "['yes' 'yes' 'no' 'yes'] \n",
-      " (4,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "features = []\n",
-    "labels = []\n",
-    "\n",
-    "for x in npData:\n",
-    "    features.append(x[:-1])\n",
-    "    labels.append(x[-1])\n",
-    "\n",
-    "features = np.array(features)\n",
-    "labels = np.array(labels)\n",
-    "\n",
-    "print(features,\"\\n\",features.shape)\n",
-    "print()\n",
-    "print(labels,\"\\n\",labels.shape)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "*Cleaning data :*\n",
     "\n",
     "creating the positive sample set"
@@ -165,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
