--- a/mlLab/3_decision_tree_partial.ipynb
+++ b/mlLab/3_decision_tree_partial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Decision Tree (IG3) :**"
+    "# Decision Tree (ID3) :"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,29 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 'sunny', 'hot', 'high', 'weak', 'no'],\n",
-       "       [2, 'sunny', 'hot', 'high', 'strong', 'no'],\n",
-       "       [3, 'cloudy', 'hot', 'high', 'weak', 'yes'],\n",
-       "       [4, 'rain', 'mild', 'high', 'weak', 'yes'],\n",
-       "       [5, 'rain', 'cool', 'normal', 'weak', 'yes'],\n",
-       "       [6, 'rain', 'cool', 'normal', 'strong', 'no'],\n",
-       "       [7, 'cloudy', 'cool', 'normal', 'strong', 'yes'],\n",
-       "       [8, 'sunny', 'mild', 'high', 'weak', 'no'],\n",
-       "       [9, 'sunny', 'cool', 'normal', 'weak', 'yes'],\n",
-       "       [10, 'rain', 'mild', 'normal', 'weak', 'yes'],\n",
-       "       [11, 'sunny', 'mild', 'normal', 'strong', 'yes'],\n",
-       "       [12, 'cloudy', 'mild', 'high', 'strong', 'yes'],\n",
-       "       [13, 'cloudy', 'hot', 'normal', 'weak', 'yes'],\n",
-       "       [14, 'rain', 'mild', 'high', 'strong', 'no']], dtype=object)"
+       "array([['sunny', 'hot', 'high', 'weak', 'no'],\n",
+       "       ['sunny', 'hot', 'high', 'strong', 'no'],\n",
+       "       ['cloudy', 'hot', 'high', 'weak', 'yes'],\n",
+       "       ['rain', 'mild', 'high', 'weak', 'yes'],\n",
+       "       ['rain', 'cool', 'normal', 'weak', 'yes'],\n",
+       "       ['rain', 'cool', 'normal', 'strong', 'no'],\n",
+       "       ['cloudy', 'cool', 'normal', 'strong', 'yes'],\n",
+       "       ['sunny', 'mild', 'high', 'weak', 'no'],\n",
+       "       ['sunny', 'cool', 'normal', 'weak', 'yes'],\n",
+       "       ['rain', 'mild', 'normal', 'weak', 'yes'],\n",
+       "       ['sunny', 'mild', 'normal', 'strong', 'yes'],\n",
+       "       ['cloudy', 'mild', 'high', 'strong', 'yes'],\n",
+       "       ['cloudy', 'hot', 'normal', 'weak', 'yes'],\n",
+       "       ['rain', 'mild', 'high', 'strong', 'no']], dtype=object)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,27 +93,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['sunny' 'hot' 'high' 'weak']\n",
-      " ['sunny' 'hot' 'high' 'strong']\n",
-      " ['cloudy' 'hot' 'high' 'weak']\n",
-      " ['rain' 'mild' 'high' 'weak']\n",
-      " ['rain' 'cool' 'normal' 'weak']\n",
-      " ['rain' 'cool' 'normal' 'strong']\n",
-      " ['cloudy' 'cool' 'normal' 'strong']\n",
-      " ['sunny' 'mild' 'high' 'weak']\n",
-      " ['sunny' 'cool' 'normal' 'weak']\n",
-      " ['rain' 'mild' 'normal' 'weak']\n",
-      " ['sunny' 'mild' 'normal' 'strong']\n",
-      " ['cloudy' 'mild' 'high' 'strong']\n",
-      " ['cloudy' 'hot' 'normal' 'weak']\n",
-      " ['rain' 'mild' 'high' 'strong']]\n",
+      "[['hot' 'high' 'weak']\n",
+      " ['hot' 'high' 'strong']\n",
+      " ['hot' 'high' 'weak']\n",
+      " ['mild' 'high' 'weak']\n",
+      " ['cool' 'normal' 'weak']\n",
+      " ['cool' 'normal' 'strong']\n",
+      " ['cool' 'normal' 'strong']\n",
+      " ['mild' 'high' 'weak']\n",
+      " ['cool' 'normal' 'weak']\n",
+      " ['mild' 'normal' 'weak']\n",
+      " ['mild' 'normal' 'strong']\n",
+      " ['mild' 'high' 'strong']\n",
+      " ['hot' 'normal' 'weak']\n",
+      " ['mild' 'high' 'strong']]\n",
       "['no' 'no' 'yes' 'yes' 'yes' 'no' 'yes' 'no' 'yes' 'yes' 'yes' 'yes' 'yes'\n",
       " 'no']\n"
      ]
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entropy(S) = 0.9402859586706309\n"
+      "Entropy(S) = 0.9402859586706311\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,17 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weather  :\n",
-      "[['sunny', [0.9709505944546686, 2, 3]], ['cloudy', [-0.0, 4, 0]], ['rain', [0.9709505944546686, 3, 2]]]\n",
-      "\n",
-      "\n",
       "temp  :\n",
       "[['hot', [1.0, 2, 2]], ['mild', [0.9182958340544896, 4, 2]], ['cool', [0.8112781244591328, 3, 1]]]\n",
       "\n",
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,31 +295,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weather  :\n",
-      "Entropy : [['sunny', [0.9709505944546686, 2, 3]], ['cloudy', [-0.0, 4, 0]], ['rain', [0.9709505944546686, 3, 2]]]\n",
-      "Gain : 0.2467498197744391\n",
-      "\n",
-      "\n",
       "temp  :\n",
       "Entropy : [['hot', [1.0, 2, 2]], ['mild', [0.9182958340544896, 4, 2]], ['cool', [0.8112781244591328, 3, 1]]]\n",
-      "Gain : 0.029222565658954647\n",
+      "Gain : 0.02922256565895487\n",
       "\n",
       "\n",
       "humidity  :\n",
       "Entropy : [['high', [0.9852281360342515, 3, 4]], ['normal', [0.5916727785823275, 6, 1]]]\n",
-      "Gain : 0.15183550136234136\n",
+      "Gain : 0.15183550136234159\n",
       "\n",
       "\n",
       "wind  :\n",
       "Entropy : [['weak', [0.8112781244591328, 6, 2]], ['strong', [1.0, 3, 3]]]\n",
-      "Gain : 0.04812703040826927\n",
+      "Gain : 0.04812703040826949\n",
       "\n",
       "\n"
      ]
@@ -336,13 +327,6 @@
     "    print(f\"Gain : {gain(i+1)}\")\n",
     "    print(\"\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -361,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
