--- a/mlLab/5_naive_bayes_clf.ipynb
+++ b/mlLab/5_naive_bayes_clf.ipynb
@@ -8,49 +8,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Importing Dependencies :*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math\n",
-    "import csv"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def read_data(filename):\n",
-    "    with open(filename,'r') as csvFile:\n",
-    "        dReader = csv.reader(csvFile,delimiter=',')\n",
-    "        headers = next(dReader)\n",
-    "        dTrain = [row for row in dReader]\n",
-    "    return headers, dTrain"
+    "*Classifier definition :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def splitDataset(dataset,splitRatio):\n",
-    "    trainSize = int(len(dataset)*splitRatio)\n",
-    "    trainSet = []\n",
-    "    testSet = list(dataset)\n",
-    "    i=0\n",
-    "    while len(trainSet)<trainSize:\n",
-    "        trainSet.append(testSet.pop(i))\n",
-    "    return [trainSet, testSet]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,57 +93,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Runner :*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The attribute names of training data : ['weather', 'temp', 'humidity', 'wind', 'play_tennis']\n",
+      "The attribute names of training data : Index(['weather', 'temp', 'humidity', 'wind', 'play_tennis'], dtype='object')\n",
       "\n",
       "The training data set are : \n",
       "['sunny' 'hot' 'high' 'weak' 'no']\n",
-      "['sunny' 'hot' 'high' 'strong' 'no']\n",
+      "['sunny' 'cool' 'normal' 'weak' 'yes']\n",
       "['cloudy' 'hot' 'high' 'weak' 'yes']\n",
-      "['rain' 'mild' 'high' 'weak' 'yes']\n",
-      "['rain' 'cool' 'normal' 'weak' 'yes']\n",
-      "['rain' 'cool' 'normal' 'strong' 'no']\n",
-      "['cloudy' 'cool' 'normal' 'strong' 'yes']\n",
       "['sunny' 'mild' 'high' 'weak' 'no']\n",
+      "['cloudy' 'mild' 'high' 'strong' 'yes']\n",
+      "['sunny' 'hot' 'high' 'strong' 'no']\n",
+      "['rain' 'mild' 'normal' 'weak' 'yes']\n",
+      "['rain' 'mild' 'high' 'weak' 'yes']\n",
       "\n",
       "The testing data set are : \n",
-      "['sunny' 'cool' 'normal' 'weak' 'yes']\n",
-      "['rain' 'mild' 'normal' 'weak' 'yes']\n",
-      "['sunny' 'mild' 'normal' 'strong' 'yes']\n",
-      "['cloudy' 'mild' 'high' 'strong' 'yes']\n",
       "['cloudy' 'hot' 'normal' 'weak' 'yes']\n",
       "['rain' 'mild' 'high' 'strong' 'no']\n",
+      "['rain' 'cool' 'normal' 'weak' 'yes']\n",
+      "['cloudy' 'cool' 'normal' 'strong' 'yes']\n",
+      "['rain' 'cool' 'normal' 'strong' 'no']\n",
+      "['sunny' 'mild' 'normal' 'strong' 'yes']\n",
       "\n",
       "Training data size : 8\n",
       "Test data size : 6\n",
       "\n",
       "Target count probability : \n",
-      "Yes\t4\t0.5\n",
-      "No\t4\t0.5\n",
+      "Yes\t5\t0.625\n",
+      "No\t3\t0.375\n",
       "\n",
       " Instance prediction target : \n",
-      "1\tno\t\tyes\n",
-      "2\tyes\t\tyes\n",
-      "3\tno\t\tyes\n",
+      "1\tyes\t\tyes\n",
+      "2\tyes\t\tno\n",
+      "3\tyes\t\tyes\n",
       "4\tyes\t\tyes\n",
-      "5\tyes\t\tyes\n",
-      "6\tno\t\tno\n",
+      "5\tyes\t\tno\n",
+      "6\tyes\t\tyes\n",
       "Accuracy : 66.66666666666666%\n"
      ]
     }
    ],
    "source": [
-    "metadata, dTrain = read_data(\"../datasets/mlLab/290524.csv\")\n",
+    "dataset = pd.read_csv(\"../datasets/mlLab/290524.csv\")\n",
+    "metadata = dataset.columns\n",
     "print(f\"The attribute names of training data : {metadata}\")\n",
     "splitRatio =0.6\n",
-    "xTrain , xTest = splitDataset(dTrain,splitRatio)\n",
+    "xTrain , xTest = train_test_split(dataset, test_size = 1-splitRatio)\n",
     "xTrain = np.array(xTrain)\n",
     "print(\"\\nThe training data set are : \")\n",
     "for x in xTrain:\n",
@@ -171,13 +163,6 @@
     "\n",
     "classify(xTrain,xTest)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -196,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
