--- a/mlLab/3_decision_tree.ipynb
+++ b/mlLab/3_decision_tree.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Importing dependencies :**"
+    "*Importing dependencies :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Setting dataset paths :**"
+    "*Setting dataset paths :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Class definition :**"
+    "*Node definition :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Data acquision method definitions :**"
+    "*Data acquision method definitions :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +157,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Helper method defintions :**"
+    "*Helper method defintions :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,12 +180,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**entropy and gain calculator method defintions :**"
+    "*entropy and gain calculator method defintions :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +225,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Node creator method definition :**"
+    "*Node creator method definition :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,12 +256,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Predictor method defintion :**"
+    "*Predictor method defintion :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,12 +280,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Utility printing method definition :**"
+    "*Utility printing method definition :*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,8 +323,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Runner :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -373,13 +380,6 @@
     "print(\"\\nPredictions for test data\")\n",
     "print_predictions(node, dTest, metadata)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
